Cocktail list overflow corrected, fixed bg img

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -6,8 +6,8 @@ body {
 }
 
 .page {
-  height: 100vh;
-  // position: relative;
+  max-height: 100vh;
+  position: relative;
 }
 
 .banner {
@@ -35,18 +35,20 @@ li {
 }
 
 #list-container {
+  max-height: 100vh;
   margin-top: 0px;
   background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('https://images.unsplash.com/photo-1570598912132-0ba1dc952b7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1534&q=80');
   background-size: cover;
-  position: relative;
+  background-attachment: fixed;
 }
 
 #list-container, .page {
-  height: 100vh;
+  min-height: 100vh;
   background-position-y: 65%;
 }
 
 .list-card {
+  max-height: 100vh;
   padding-left: 24px;;
   padding-bottom: 24px;
   background-color: rgba(255,255,255,0.8);
@@ -54,6 +56,7 @@ li {
   width: 500px;
   position: absolute;
   left: 110px;
+  overflow: auto;
 }
 
 .list-group-item {
